real photo of staff, scroll in iphone fix, widget z-index fix

--- a/bootstrap-material-design_custom-variables.less
+++ b/bootstrap-material-design_custom-variables.less
@@ -18,9 +18,13 @@
 }
 
 .list-group-item .row-content .list-group-item-text {
- color: black !important;
+    color: black !important;
 }
 
-.navbar-collapse {
+.navbar-collapse.navbar-inverse-collapse.collapse {
     padding-left: 0;
+}
+
+.navbar-collapse.navbar-inverse-collapse.collapse.in {
+    padding-left: 15px;
 }
