--- a/main.less
+++ b/main.less
@@ -1,7 +1,8 @@
 .main {
     width: 100%;
     height: 100%;
-    overflow: auto;
+    overflow-y: scroll;
+    -webkit-overflow-scrolling: touch;
 
     &_scrollable-area {
         width: 100%;
