--- a/staff.less
+++ b/staff.less
@@ -24,8 +24,8 @@
         text-align: left;
         padding-left: 5%;
         left: 0;
-        height: 25%;
-        bottom: -25%;
+        height: 30%;
+        bottom: -30%;
         width: 100%;
         z-index: 100;
         background-color: rgba(0,0,0,0.8);
@@ -42,19 +42,12 @@
     }
 }
 
-@media screen and (max-width: 1199px) and (min-width: 970px)  {
-    .staff_caption-animation {
-        height: 35%;
-        bottom: -35%;
-    }
-}
-
 @media (max-width: @screen-sm-max) { 
     .staff {
         display: block;
     }
     .staff_caption-animation {
-        height: 40%;
-        bottom: -40%;
+        height: 35%;
+        bottom: -35%;
     }
  }
